--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "code-eval",
   "version": "0.0.1",
   "devDependencies": {
-    "babel-cli": "^6.0.0"
+    "babel": "^6.23.0",
+    "babel-cli": "^6.23.0",
+    "babel-preset-env": "^1.1.9"
   }
 }
